--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "react-cookie": "^7.2.2",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
+    "react-router": "^7.2.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
