--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react-router": "^7.2.0",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
