--- a/resumeboost/build.gradle
+++ b/resumeboost/build.gradle
@@ -50,6 +50,9 @@ dependencies {
 
 	implementation 'com.googlecode.json-simple:json-simple:1.1.1'
 	implementation 'com.github.shin285:KOMORAN:3.3.4'
+
+	// S3
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
 
 tasks.named('test') {
