--- a/resumeboost/build.gradle
+++ b/resumeboost/build.gradle
@@ -24,6 +24,10 @@ repositories {
 		maven { url 'https://jitpack.io' }
 }
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs << "-parameters"
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -53,6 +57,10 @@ dependencies {
 
 	// S3
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+	// xml
+	// implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.15.0'
+  implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
 }
 
 tasks.named('test') {
