--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,13 +36,13 @@ jobs:
       - name: Build and push Backend Docker image
         run: |
           cd resumeboost
-          docker build -t hws1016/resumeboost-backend:latest
+          docker build -t hws1016/resumeboost-backend:latest .
           docker push hws1016/resumeboost-backend:latest
 
       - name: Build and push Frontend Docker image
         run: |
           cd frontend
-          docker build -t hws1016/resumeboost-frontend:latest
+          docker build -t hws1016/resumeboost-frontend:latest .
           docker push hws1016/resumeboost-frontend:latest
 
       - name: Deploy to EC2
@@ -52,7 +52,7 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            cd /home/ec2-user
-            docker-compose pull
-            docker-compose up -d
-            docker image prune -af
+            cd /home/ec2-user   # /home/ec2-user에 docker-compose.yml 파일이 있어야 함
+            docker-compose pull  # 최신 이미지 다운로드
+            docker-compose up -d # 백그라운드에서 컨테이너 실행
+            docker image prune -af  # 불필요한 이미지를 정리
