--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,9 +3,9 @@ FROM node:22.13.1 AS build
 
 WORKDIR /app
 
-COPY frontend/package*.json ./
+COPY /package*.json ./
 RUN npm install
-COPY frontend/. .
+COPY /. .
 RUN npm run build
 
 # Nginx로 서빙
