--- a/resumeboost/src/main/resources/application-aws.yml
+++ b/resumeboost/src/main/resources/application-aws.yml
@@ -7,5 +7,5 @@ cloud:
     region:
       static: ap-northeast-2
     credentials:
-      access-key: AKIAQWHCPU7NAEB7GI6P
-      secret-key: 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
+      access-key: "##################"
+      secret-key: "################################"
