--- a/resumeboost/src/main/resources/application.yml
+++ b/resumeboost/src/main/resources/application.yml
@@ -41,5 +41,5 @@ logging:
 file.path: "E:/saveFiles"
 
 kakaopay:
-  secret-key: DEV253954679F732C951B24C65E73933D731D33D
+  secret-key: "#####################"
   cid: TC0ONETIME
