--- a/resumeboost/src/main/resources/application.yml
+++ b/resumeboost/src/main/resources/application.yml
@@ -5,8 +5,9 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
-    password: 1111
-    url: jdbc:mysql://ec2-13-125-236-223.ap-northeast-2.compute.amazonaws.com:3307/resumeboostdb
+    password: 1234
+    # url: jdbc:mysql://ec2-13-125-236-223.ap-northeast-2.compute.amazonaws.com:3307/resumeboostdb
+    url: jdbc:mysql://localhost:3306/resumeboostdb
 
   #  thymeleaf:
   #    prefix: classpath.templates/
