--- a/resumeboost/src/main/resources/application.yml
+++ b/resumeboost/src/main/resources/application.yml
@@ -6,7 +6,6 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 1234
-    # url: jdbc:mysql://ec2-13-125-236-223.ap-northeast-2.compute.amazonaws.com:3307/resumeboostdb
     url: jdbc:mysql://localhost:3306/resumeboostdb
 
   #  thymeleaf:
@@ -39,7 +38,7 @@ logging:
     org.hibernate.SQL: debug
     org.hibernate.type: trace
 
-file.path: "E:/saveFiles"
+file.path: "E:/saveFiles/"
 
 kakaopay:
   secret-key: "#####################"
